Correction des contrastes et des étiquettes des liens

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1476,7 +1476,8 @@ hr {
     margin: -1px;
     overflow: hidden;
     clip: rect(0, 0, 0, 0);
-    border: 0
+    border: 0;
+    display: none;
 }
 
 .sr-only-focusable:active,
